--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
           <div class="col-md-6" data-aos="fade-up">
 
             <h2>About Me</h2>
-            <p class="mb-0">John is a professional, hard-working, and detail-oriented Web designer and WordPress developer
+            <p class="mb-0">John is a professional, hard-working, and detail-oriented Web Designer and WordPress Developer
  specializing in mockup design and creating stunning websites. </p>
           </div>
 
