link all to a new page

--- a/ggjobposting.html
+++ b/ggjobposting.html
@@ -105,7 +105,7 @@
                   <li>Poster</li>
                 </ul>
 
-                 <p><a href="https://www.figma.com/file/gLAm8KMAukdg63aWTaL3Ho/GeniusGiant-Job-Posting-Design?node-id=2%3A15" class="readmore">View All Designs</a> <a href="https://www.facebook.com/Geniusgiant" class="readmore">Visit Posting</a></p> 
+                 <p><a href="https://www.figma.com/file/gLAm8KMAukdg63aWTaL3Ho/GeniusGiant-Job-Posting-Design?node-id=2%3A15" class="readmore" target="_blank">View All Designs</a> <a href="https://www.facebook.com/Geniusgiant" class="readmore" target="_blank">Visit Posting</a></p> 
               </div>
             </div>
           </div>
