--- a/motionscloud.html
+++ b/motionscloud.html
@@ -105,7 +105,7 @@
                   <li>Configure WordPress site</li>
                 </ul>
 
-                <p><a href="https://www.figma.com/file/gAQ2t8UygTr8hnVZUsd6Tt/Motionscloud-Project-Design-Mar-2021?node-id=3034%3A6989" class="readmore">View All Designs</a> <a href="https://motionscloud.com/" class="readmore">Visit Website</a></p> 
+                <p><a href="https://www.figma.com/file/gAQ2t8UygTr8hnVZUsd6Tt/Motionscloud-Project-Design-Mar-2021?node-id=3034%3A6989" class="readmore" target="_blank">View All Designs</a> <a href="https://motionscloud.com/" class="readmore" target="_blank">Visit Website</a></p> 
  <!--  https://www.figma.com/file/9Fcde3UbdUiHfAejPM0qEg/Motionscloud-Website-(Dev)?node-id=359%3A698  -->
               </div>
             </div>
