--- a/options-food-medical-diet-system.html
+++ b/options-food-medical-diet-system.html
@@ -105,7 +105,7 @@
                   <li>Branding</li>
                 </ul>
 
-                <p><a href="https://www.figma.com/file/swCW3SROeqFJU8aGIltdK4/OPTIONS-FOOD-HOMEPAGE-DESIGN?node-id=0%3A1" class="readmore">View All Designs</a></p>
+                <p><a href="https://www.figma.com/file/swCW3SROeqFJU8aGIltdK4/OPTIONS-FOOD-HOMEPAGE-DESIGN?node-id=0%3A1" class="readmore" target="_blank">View All Designs</a></p>
               </div>
             </div>
           </div>
