--- a/repitsocial.html
+++ b/repitsocial.html
@@ -105,7 +105,7 @@
                   <li>Configure WordPress site</li>
                 </ul>
 
-                <p><a href="https://www.figma.com/file/RZf21dXmsmEFQCooUxpeIg/Design-for-Dev---REPIT-Social?node-id=0%3A1" class="readmore">View All Designs</a> <a href="https://repitsocial.com/" class="readmore">Visit Website</a></p>
+                <p><a href="https://www.figma.com/file/RZf21dXmsmEFQCooUxpeIg/Design-for-Dev---REPIT-Social?node-id=0%3A1" class="readmore" target="_blank">View All Designs</a> <a href="https://repitsocial.com/" class="readmore" target="_blank">Visit Website</a></p>
               </div>
             </div>
           </div>
