--- a/rounup.html
+++ b/rounup.html
@@ -105,7 +105,7 @@
                   <li>Branding</li>
                 </ul>
 
-                <p><a href="https://www.figma.com/file/DQFfwRIolg68Zv5KlWfr8K/ROUNUP-DESIGN-(Dev)?node-id=573%3A53562" class="readmore">View All Designs</a></p>
+                <p><a href="https://www.figma.com/file/DQFfwRIolg68Zv5KlWfr8K/ROUNUP-DESIGN-(Dev)?node-id=573%3A53562" class="readmore" target="_blank">View All Designs</a></p>
               </div>
             </div>
           </div>
