--- a/shotkam.html
+++ b/shotkam.html
@@ -105,7 +105,7 @@
                   <li>Branding</li>
                 </ul>
 
-                <p><a href="https://www.figma.com/file/uC00RkEO1cdVRpzciHMzbV/ShotKam-(Dev)?node-id=0%3A1" class="readmore">View All Designs</a></p>
+                <p><a href="https://www.figma.com/file/uC00RkEO1cdVRpzciHMzbV/ShotKam-(Dev)?node-id=0%3A1" class="readmore" target="_blank">View All Designs</a></p>
               </div>
             </div>
           </div>
