--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <a href="#" data-filter="*" class="active">All</a>
               <a href="#" data-filter=".web">Web</a>
               <a href="#" data-filter=".mobile">Mobile</a>
-              <a href="#" data-filter=".poster">Poster</a>
+             <!--  <a href="#" data-filter=".poster">Poster</a> -->
               <a href="#" data-filter=".wordpress">WordPress</a>
               <!-- <a href="#" data-filter=".photography">Photography</a> -->
 
@@ -165,7 +165,7 @@
               <img class="img-fluid" src="assets/img/rounup-design.png">
             </a>
           </div>
-          <div class="item poster col-sm-6 col-md-4 col-lg-4 mb-4">
+         <!--  <div class="item poster col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="ggjobposting.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>GeniusGiant Job Posting</h3>
@@ -173,7 +173,7 @@
               </div>
               <img class="img-fluid" src="assets/img/GeniusGiant-Job-Posting.png">
             </a>
-          </div>
+          </div> -->
         </div>
       </div>
     </section><!-- End  Works Section -->
