scoot mobile design

--- a/index.html
+++ b/index.html
@@ -165,6 +165,15 @@
               <img class="img-fluid" src="assets/img/rounup-design.png">
             </a>
           </div>
+          <div class="item mobile col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="scoot.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Scoot</h3>
+                <span>Mobile</span>
+              </div>
+              <img class="img-fluid" src="assets/img/scoot.png">
+            </a>
+          </div>
          <!--  <div class="item poster col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="ggjobposting.html" class="item-wrap fancybox">
               <div class="work-info">
