--- a/about.html
+++ b/about.html
@@ -77,8 +77,8 @@
           <div class="col-md-6" data-aos="fade-up">
 
             <h2>About Me</h2>
-            <p class="mb-0">John is a professional, hard-working, and detail-oriented Web Designer and WordPress Developer
- specializing in mockup design and creating stunning websites. </p>
+            <p class="mb-0">John is a professional, hard-working, and detail-oriented Web Designer and WordPress Developer with 2+ years of experience
+ specializing in mockup design, landing pages, and creating stunning websites. </p>
           </div>
 
         </div>
@@ -161,9 +161,9 @@
 
           <div class="col-md-7 mb-5 mb-md-0" data-aos="fade-up">
             <p><img src="assets/img/me.jpg" alt="Image" class="img-fluid"></p>
-            <p>
-Every day I play my guitar to refresh my mind before and after work. </p>
-            <p>Specialties: Figma, WordPress, Adobe Photoshop, Illustrator, email design, mockup design, web layout, and website creation.</p>
+           <!--  <p>
+Every day I play my guitar to refresh my mind before and after work. </p> -->
+            <p>Specialties: Figma, WordPress, Adobe Photoshop, Illustrator, Mockup Design, Web Layout, Page Builder, and Website Creation.</p>
             <!-- <p><a href="#" class="readmore">Download my CV</a></p> -->
              <!-- <p><a href="https://calendly.com/johnmarkbondad/my-client" class="readmore">Talk To Me</a></p> -->
 
