--- a/about.html
+++ b/about.html
@@ -189,7 +189,7 @@ Every day I play my guitar to refresh my mind before and after work. </p> -->
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <p class="mb-1">&copy; Copyright MyPortfolio. All Rights Reserved</p>
+<!--           <p class="mb-1">&copy; Copyright MyPortfolio. All Rights Reserved</p> -->
           <div class="credits">
            
           Designed & made by <a href="#">John Mark Bondad</a>
