--- a/index.html
+++ b/index.html
@@ -174,6 +174,24 @@
               <img class="img-fluid" src="assets/img/scoot.png">
             </a>
           </div>
+         <div class="item web mobile col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="motionscloud-video-call.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>MotionsCloud Video Call</h3>
+                <span>Web | Mobile </span>
+              </div>
+              <img class="img-fluid" src="assets/img/video-call.png">
+            </a>
+          </div>
+          <div class="item web mobile col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="net-insurance.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Net Insurance</h3>
+                <span>Web | Mobile </span>
+              </div>
+              <img class="img-fluid" src="assets/img/net-insurance.png">
+            </a>
+          </div>
          <!--  <div class="item poster col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="ggjobposting.html" class="item-wrap fancybox">
               <div class="work-info">
@@ -332,7 +350,7 @@ I know some amazing developers I can recommend.</p>
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <p class="mb-1">&copy; Copyright MyPortfolio. All Rights Reserved</p>
+     <!--      <p class="mb-1">&copy; Copyright MyPortfolio. All Rights Reserved</p> -->
           <div class="credits">
 
             Designed & made by <a href="#">John Mark Bondad</a>
