--- a/about.html
+++ b/about.html
@@ -77,8 +77,8 @@
           <div class="col-md-6" data-aos="fade-up">
 
             <h2>About Me</h2>
-            <p class="mb-0">John is a professional, hard-working, and detail-oriented Web Designer and WordPress Developer with 2+ years of experience
- specializing in mockup design, landing pages, and creating stunning websites. </p>
+            <p class="mb-0">John is a professional, hard-working, and detail-oriented Web Designer
+ specializing in mockup design, landing pages, product design , and creating stunning websites using WordPress. </p>
           </div>
 
         </div>
