added new project for Web Development

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
             <li><a href="index.html">Home</a></li>
             <li class="active"><a href="about.html">About Me</a></li>
             <li><a href="services.html">Services</a></li>
-            <li><a href="works.html">Works</a></li>
+            <!-- <li><a href="works.html">Works</a></li> -->
             <!-- <li><a href="contact.html">Contact</a></li> -->
           </ul>
         </div>
@@ -77,7 +77,7 @@
           <div class="col-md-6" data-aos="fade-up">
 
             <h2>About Me</h2>
-            <p class="mb-0">John is a professional, hard-working, and detail-oriented Web Designer
+            <p class="mb-0">John is a professional, hard-working, and detail-oriented Web Designer and Web Developer
  specializing in mockup design, landing pages, product design , and creating stunning websites using WordPress. </p>
           </div>
 
@@ -108,10 +108,20 @@
                 </div>
               </li>
 
+               <li class="mb-3">
+                <div class="d-flex mb-1">
+                  <strong>PHP/JAVASCRIPT</strong>
+                  <span class="ml-auto">90%</span>
+                </div>
+                <div class="progress custom-progress">
+                  <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </li>
+
               <li class="mb-3">
                 <div class="d-flex mb-1">
                   <strong>HTML/CSS3/BOOTSTRAP</strong>
-                  <span class="ml-auto">85%</span>
+                  <span class="ml-auto">90%</span>
                 </div>
                 <div class="progress custom-progress">
                   <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
@@ -199,7 +209,7 @@ Every day I play my guitar to refresh my mind before and after work. </p> -->
           <a href="https://twitter.com/johnmarkbondad"><span class="bi bi-twitter"></span></a>
           <a href="https://www.facebook.com/johnmark.bondad.3/"><span class="bi bi-facebook"></span></a>
           <a href="https://www.instagram.com/jm_bondad/"><span class="bi bi-instagram"></span></a>
-          <a href="https://www.linkedin.com/in/johnmarkbondad/"><span class="bi bi-linkedin"></span></a>
+          <!-- <a href="https://www.linkedin.com/in/johnmarkbondad/"><span class="bi bi-linkedin"></span></a> -->
         </div>
       </div>
     </div>
