--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="about.html">About Me</a></li>
             <li><a href="services.html">Services</a></li>
-            <li><a href="works.html">Works</a></li>
+           <!--  <li><a href="works.html">Works</a></li> -->
             <!-- <li><a href="contact.html">Contact</a></li> -->
           </ul>
         </div>
@@ -80,7 +80,7 @@
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-12 col-lg-6 mb-4 mb-lg-0" data-aos="fade-up">
-            <h2>Hey, I'm John Mark Bondad</h2>
+            <h2>Hey, I'm John!</h2>
             <p class="mb-0">Creative Web Designer</p>
           </div>
           <div class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up" data-aos-delay="100">
@@ -90,7 +90,7 @@
               <a href="#" data-filter=".mobile">Mobile</a>
              <!--  <a href="#" data-filter=".poster">Poster</a> -->
               <a href="#" data-filter=".wordpress">WordPress</a>
-              <!-- <a href="#" data-filter=".photography">Photography</a> -->
+              <a href="#" data-filter=".webdevelopment">Web Development</a>
 
 
               <!-- <a href="#" data-filter=".web">Web</a>
@@ -112,12 +112,30 @@
             </a>
           </div> -->
           <div class="item mobile col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="mc-claimsforce.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>MC - Claimsforce Dashboard Design</h3>
+                <span>Web</span>
+              </div>
+              <img class="img-fluid" src="assets/img/motionscloud-dashboard-design-2022-cf.png">
+            </a>
+          </div>
+          <div class="item mobile col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="kingdom-app.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Kingom App</h3>
                 <span>Mobile</span>
               </div>
               <img class="img-fluid" src="assets/img/kingdom-app-mobile-design.png">
+            </a>
+          </div>
+          <div class="item mobile col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="mc-car-outlines.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>MC - Car Outlines</h3>
+                <span>Mobile</span>
+              </div>
+              <img class="img-fluid" src="assets/img/mc-car-outlines.png">
             </a>
           </div>
           <div class="item mobile wordpress col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -192,6 +210,51 @@
               <img class="img-fluid" src="assets/img/net-insurance.png">
             </a>
           </div>
+          <div class="item wordpress webdevelopment col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="before-and-after-effects-wp.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Before and After Effects - WordPress Plugin</h3>
+                <span>WordPress</span>
+              </div>
+              <img class="img-fluid" src="assets/img/before-and-after effects-wordpress-plugin.png">
+            </a>
+          </div>
+          <div class="item wordpress webdevelopment col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="library-booking list-wordpress-plugin.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>Library Booking List – WordPress Plugin</h3>
+                <span>WordPress</span>
+              </div>
+              <img class="img-fluid" src="assets/img/library-booking list-wordpress-plugin.png">
+            </a>
+          </div>
+          <div class="item webdevelopment col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="pullout-approval-codeigniter.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>CodeIgniter – Pull Out Approval</h3>
+                <span>Web Development</span>
+              </div>
+              <img class="img-fluid" src="assets/img/pull-out-approval.png">
+            </a>
+          </div>
+          <div class="item webdevelopment col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="pull-out-request-codeigniter.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>CodeIgniter – Pull Out Request</h3>
+                <span>Web Development</span>
+              </div>
+              <img class="img-fluid" src="assets/img/codeigniter-pull-out-request.png">
+            </a>
+          </div>
+          <div class="item webdevelopment col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="psd-to-html.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>PSD to HTML</h3>
+                <span>Web Development</span>
+              </div>
+              <img class="img-fluid" src="assets/img/psd-to-html.png">
+            </a>
+          </div>
          <!--  <div class="item poster col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="ggjobposting.html" class="item-wrap fancybox">
               <div class="work-info">
@@ -234,8 +297,14 @@ I help them turn their ideas into designs and functional websites. Great designs
           <div class="col-4 col-sm-4 col-md-2">
             <a href="https://eu.shotkam.com/" class="client-logo" target="_blank"><img src="assets/img/ShotKam.svg" alt="Image" class="img-fluid"></a>
           </div>
+          <!-- <div class="col-4 col-sm-4 col-md-2" style="padding-top: 50px;">
+            <a href="https://web.claimsforce.com/login/" class="client-logo" target="_blank"><img src="assets/img/claimsforce-logo.svg" alt="Image" class="img-fluid"></a>
+          </div> -->
 
         </div>
+
+    
+
       </div>
     </section><!-- End Clients Section -->
 
