--- a/services.html
+++ b/services.html
@@ -44,7 +44,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Me</a></li>
             <li class="active"><a href="services.html">Services</a></li>
-            <li><a href="works.html">Works</a></li>
+            <!-- <li><a href="works.html">Works</a></li> -->
             <!-- <li><a href="contact.html">Contact</a></li> -->
           </ul>
         </div>
@@ -198,7 +198,7 @@ I know some amazing developers I can recommend.</p>
           <a href="https://twitter.com/johnmarkbondad"><span class="bi bi-twitter"></span></a>
           <a href="https://www.facebook.com/johnmark.bondad.3/"><span class="bi bi-facebook"></span></a>
           <a href="https://www.instagram.com/jm_bondad/"><span class="bi bi-instagram"></span></a>
-          <a href="https://www.linkedin.com/in/johnmarkbondad/"><span class="bi bi-linkedin"></span></a>
+         <!--  <a href="https://www.linkedin.com/in/johnmarkbondad/"><span class="bi bi-linkedin"></span></a> -->
         </div>
       </div>
     </div>
