added Elementor and Linkedin profile

--- a/about.html
+++ b/about.html
@@ -173,7 +173,7 @@
             <p><img src="assets/img/me.jpg" alt="Image" class="img-fluid"></p>
            <!--  <p>
 Every day I play my guitar to refresh my mind before and after work. </p> -->
-            <p>Specialties: Figma, WordPress, Adobe Photoshop, Illustrator, Mockup Design, Web Layout, Page Builder, and Website Creation.</p>
+            <p>Specialties: Figma, WordPress, Elementor, Adobe Photoshop, Illustrator, Mockup Design, Web Layout, Page Builder, and Website Creation.</p>
             <!-- <p><a href="#" class="readmore">Download my CV</a></p> -->
              <!-- <p><a href="https://calendly.com/johnmarkbondad/my-client" class="readmore">Talk To Me</a></p> -->
 
@@ -209,7 +209,7 @@ Every day I play my guitar to refresh my mind before and after work. </p> -->
           <a href="https://twitter.com/johnmarkbondad"><span class="bi bi-twitter"></span></a>
           <a href="https://www.facebook.com/johnmark.bondad.3/"><span class="bi bi-facebook"></span></a>
           <a href="https://www.instagram.com/jm_bondad/"><span class="bi bi-instagram"></span></a>
-          <!-- <a href="https://www.linkedin.com/in/johnmarkbondad/"><span class="bi bi-linkedin"></span></a> -->
+          <a href="https://www.linkedin.com/in/johnmarkbondad/"><span class="bi bi-linkedin"></span></a> 
         </div>
       </div>
     </div>
