--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@ I know some amazing developers I can recommend.</p>
           <a href="https://twitter.com/johnmarkbondad"><span class="bi bi-twitter"></span></a>
           <a href="https://www.facebook.com/johnmark.bondad.3/"><span class="bi bi-facebook"></span></a>
           <a href="https://www.instagram.com/jm_bondad/"><span class="bi bi-instagram"></span></a>
-        <!--  <a href="https://www.linkedin.com/in/johnmarkbondad/"><span class="bi bi-linkedin"></span></a> -->
+         <a href="https://www.linkedin.com/in/johnmarkbondad/"><span class="bi bi-linkedin"></span></a> 
         </div>
       </div>
     </div>
