--- a/motionscloud-video-call.html
+++ b/motionscloud-video-call.html
@@ -104,7 +104,8 @@
                   <li>Layout design</li>
                 </ul>
 
-                <p><a href="https://www.figma.com/file/1PaakTIQZYZbGJNzDllSZw/Bootstrap%3A-Motionscloud-project-design?node-id=4%3A261738" class="readmore" target="_blank">View All Designs</a></p>
+                <h4 class="h4 mb-3">Link to project design</h4>
+                <p><a href="https://www.figma.com/file/1PaakTIQZYZbGJNzDllSZw/Bootstrap%3A-Motionscloud-project-design?node-id=4%3A261738" class="readmore" target="_blank">View All Design</a></p>
               </div>
             </div>
           </div>
