--- a/options-food-medical-diet-system.html
+++ b/options-food-medical-diet-system.html
@@ -105,7 +105,8 @@
                   <li>Branding</li>
                 </ul>
 
-                <p><a href="https://www.figma.com/file/swCW3SROeqFJU8aGIltdK4/OPTIONS-FOOD-HOMEPAGE-DESIGN?node-id=0%3A1" class="readmore" target="_blank">View All Designs</a></p>
+                <h4 class="h4 mb-3">Link to project design</h4>
+                <p><a href="https://www.figma.com/file/swCW3SROeqFJU8aGIltdK4/OPTIONS-FOOD-HOMEPAGE-DESIGN?node-id=0%3A1" class="readmore" target="_blank">See All Design</a></p>
               </div>
             </div>
           </div>
