--- a/kingdom-app.html
+++ b/kingdom-app.html
@@ -105,7 +105,8 @@
                   <li>Branding</li>
                 </ul>
 
-                <p><a href="https://www.figma.com/file/3Uid62hQmFPRHH2ZOHm4nc/Kingdom-App" class="readmore" target="_blank">View All Designs</a></p>
+                <h4 class="h4 mb-3">Link to project design</h4>
+                <p><a href="https://www.figma.com/file/3Uid62hQmFPRHH2ZOHm4nc/Kingdom-App" class="readmore" target="_blank">See All Design</a></p>
               </div>
             </div>
           </div>
