--- a/library-booking list-wordpress-plugin.html
+++ b/library-booking list-wordpress-plugin.html
@@ -105,6 +105,7 @@
                   <li>PHP</li>
                 </ul>
 
+                <h4 class="h4 mb-3">Link to project design</h4>
                 <p><a href="https://drive.google.com/drive/folders/1ErPAqOBpPwKxoixDvhu0QOrI72XTJvpX" class="readmore" target="_blank">DOWNLOAD PROJECT</a></p>
               </div>
             </div>
