--- a/mc-claimsforce.html
+++ b/mc-claimsforce.html
@@ -92,7 +92,7 @@
                 <p class="mb-4"><span class="text-muted">Design</span></p>
 
                 <div class="mb-5">
-                  <p>Redesigned the existing dashboard for internal and external employees to make it look better and user-friendly for users. We have a design system to make the workflow organize.
+                  <p>Redesigned the existing dashboard for internal and external employees to make it look better and user-friendly for users. We have a design system to make the workflow organize. This project is more than 400+ templates.
 </p>
 
                 </div>
@@ -105,7 +105,9 @@
                   <li>Branding</li>
                 </ul>
 
-                <p><a href="https://www.figma.com/file/0NMjWjqOHnUPlgmDR4HM1t/Motionscloud-Dashboard-Design-2022_CF?node-id=62%3A2&t=yVT9wGyUNChWCSlH-0" class="readmore" target="_blank">View All Designs</a></p>
+                <h4 class="h4 mb-3">Link to project design</h4>
+                <p><a href="https://www.figma.com/file/4LG5IP1YWXi0IafYpPnPkM/Motionscloud-Dashboard-Design-2022_CF?node-id=62%3A2&t=zW67iic4g7uYkXx8-0" class="readmore" target="_blank">See Internal</a> <a href="https://www.figma.com/file/4LG5IP1YWXi0IafYpPnPkM/Motionscloud-Dashboard-Design-2022_CF?node-id=0%3A1&t=zW67iic4g7uYkXx8-0" class="readmore" target="_blank">See External</a></p>
+                <p></p>
               </div>
             </div>
           </div>
