--- a/shotkam.html
+++ b/shotkam.html
@@ -105,7 +105,8 @@
                   <li>Branding</li>
                 </ul>
 
-                <p><a href="https://www.figma.com/file/uC00RkEO1cdVRpzciHMzbV/ShotKam-(Dev)?node-id=0%3A1" class="readmore" target="_blank">View All Designs</a></p>
+                <h4 class="h4 mb-3">Link to project design</h4>
+                <p><a href="https://www.figma.com/file/uC00RkEO1cdVRpzciHMzbV/ShotKam-(Dev)?node-id=0%3A1" class="readmore" target="_blank">See All Design</a></p>
               </div>
             </div>
           </div>
