added behance icon and change cover imgs

--- a/index.html
+++ b/index.html
@@ -123,19 +123,28 @@
           <div class="item mobile col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="kingdom-app.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>Kingom App</h3>
+                <h3>Kingdom App</h3>
                 <span>Mobile</span>
               </div>
               <img class="img-fluid" src="assets/img/kingdom-app-mobile-design.png">
             </a>
           </div>
-          <div class="item mobile col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="mc-car-outlines.html" class="item-wrap fancybox">
+                    <div class="item web mobile wordpress col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="motionscloud.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>MC - Car Outlines</h3>
-                <span>Mobile</span>
+                <h3>MotionsCloud</h3>
+                <span>Web | Mobile | WordPress</span>
               </div>
-              <img class="img-fluid" src="assets/img/mc-car-outlines.png">
+              <img class="img-fluid" src="assets/img/motionscloud-design.png">
+            </a>
+          </div>
+          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="rounup.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>RounUp</h3>
+                <span>Web</span>
+              </div>
+              <img class="img-fluid" src="assets/img/rounup-design.png">
             </a>
           </div>
           <div class="item mobile wordpress col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -145,6 +154,15 @@
                 <span>Mobile | WordPress</span>
               </div>
               <img class="img-fluid" src="assets/img/repitsocial-mobile-design.png">
+            </a>
+          </div>
+          <div class="item mobile col-sm-6 col-md-4 col-lg-4 mb-4">
+            <a href="mc-car-outlines.html" class="item-wrap fancybox">
+              <div class="work-info">
+                <h3>MC - Car Outlines</h3>
+                <span>Mobile</span>
+              </div>
+              <img class="img-fluid" src="assets/img/mc-car-outlines.png">
             </a>
           </div>
           <div class="item web mobile col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -163,24 +181,6 @@
                 <span>Web | Mobile</span>
               </div>
               <img class="img-fluid" src="assets/img/mobile-design-home-page.png">
-            </a>
-          </div>
-          <div class="item web mobile wordpress col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="motionscloud.html" class="item-wrap fancybox">
-              <div class="work-info">
-                <h3>MotionsCloud</h3>
-                <span>Web | Mobile | WordPress</span>
-              </div>
-              <img class="img-fluid" src="assets/img/motionscloud-design.png">
-            </a>
-          </div>
-          <div class="item web col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="rounup.html" class="item-wrap fancybox">
-              <div class="work-info">
-                <h3>RounUp</h3>
-                <span>Web</span>
-              </div>
-              <img class="img-fluid" src="assets/img/rounup-design.png">
             </a>
           </div>
           <div class="item mobile col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -430,6 +430,7 @@ I know some amazing developers I can recommend.</p>
           <a href="https://www.facebook.com/johnmark.bondad.3/"><span class="bi bi-facebook"></span></a>
           <a href="https://www.instagram.com/jm_bondad/"><span class="bi bi-instagram"></span></a>
          <a href="https://www.linkedin.com/in/johnmarkbondad/"><span class="bi bi-linkedin"></span></a> 
+         <a href="https://www.behance.net/johnmarkbondad/"><span class="bi bi-behance"></span></a> 
         </div>
       </div>
     </div>
