--- a/mc-claimsforce.html
+++ b/mc-claimsforce.html
@@ -139,6 +139,7 @@
           <a href="https://www.facebook.com/johnmark.bondad.3/"><span class="bi bi-facebook"></span></a>
           <a href="https://www.instagram.com/jm_bondad/"><span class="bi bi-instagram"></span></a>
   <!--         <a href="https://www.linkedin.com/in/johnmarkbondad/"><span class="bi bi-linkedin"></span></a> -->
+  <a href="https://www.behance.net/johnmarkbondad/"><span class="bi bi-behance"></span></a> 
         </div>
       </div>
     </div>
