--- a/about.html
+++ b/about.html
@@ -209,7 +209,8 @@ Every day I play my guitar to refresh my mind before and after work. </p> -->
           <a href="https://twitter.com/johnmarkbondad"><span class="bi bi-twitter"></span></a>
           <a href="https://www.facebook.com/johnmark.bondad.3/"><span class="bi bi-facebook"></span></a>
           <a href="https://www.instagram.com/jm_bondad/"><span class="bi bi-instagram"></span></a>
-          <a href="https://www.linkedin.com/in/johnmarkbondad/"><span class="bi bi-linkedin"></span></a> 
+          <a href="https://www.linkedin.com/in/johnmarkbondad/"><span class="bi bi-linkedin"></span></a>
+          <a href="https://www.behance.net/johnmarkbondad/"><span class="bi bi-behance"></span></a>  
         </div>
       </div>
     </div>
