--- a/scoot.html
+++ b/scoot.html
@@ -106,7 +106,7 @@ Singaporean low-cost airline and a wholly owned subsidiary of Singapore Airlines
                   <li>Branding</li>
                 </ul>
 
-                <p><a href="https://www.figma.com/file/BKqg5NcKCkBTUhHR1kdtrv/Scoot-Design" class="readmore" target="_blank">View All Designs</a></p>
+                <p><a href="https://www.figma.com/file/BKqg5NcKCkBTUhHR1kdtrv/Scoot-Design" class="readmore" target="_blank">See All Design</a></p>
               </div>
             </div>
           </div>
@@ -138,6 +138,7 @@ Singaporean low-cost airline and a wholly owned subsidiary of Singapore Airlines
           <a href="https://www.facebook.com/johnmark.bondad.3/"><span class="bi bi-facebook"></span></a>
           <a href="https://www.instagram.com/jm_bondad/"><span class="bi bi-instagram"></span></a>
           <a href="https://www.linkedin.com/in/johnmarkbondad/"><span class="bi bi-linkedin"></span></a>
+          <a href="https://www.behance.net/johnmarkbondad/"><span class="bi bi-behance"></span></a> 
         </div>
       </div>
     </div>
