--- a/index.html
+++ b/index.html
@@ -63,15 +63,14 @@
     </div>
   </div>
 
-  <nav class="navbar navbar-light custom-navbar">
+<!--   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-      <!-- <a class="navbar-brand" href="index.html"><span style="font-family: 'Ms Madi', cursive;">My Portfolio.</span></a> -->
       <a class="navbar-brand" href="index.html" style="font-family: Old Standard TT">MyPortfolio.</a>
       <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar">
         <span></span>
       </a>
     </div>
-  </nav>
+  </nav> -->
 
   <main id="main">
 
@@ -210,7 +209,7 @@
               <img class="img-fluid" src="assets/img/net-insurance.png">
             </a>
           </div>
-          <div class="item wordpress webdevelopment col-sm-6 col-md-4 col-lg-4 mb-4">
+<!--           <div class="item wordpress webdevelopment col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="before-and-after-effects-wp.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>Before and After Effects - WordPress Plugin</h3>
@@ -218,7 +217,7 @@
               </div>
               <img class="img-fluid" src="assets/img/before-and-after effects-wordpress-plugin.png">
             </a>
-          </div>
+          </div> -->
           <div class="item wordpress webdevelopment col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="library-booking list-wordpress-plugin.html" class="item-wrap fancybox">
               <div class="work-info">
