--- a/index.html
+++ b/index.html
@@ -345,8 +345,7 @@ you design your mobile app optimised for all devices and platforms.</p>
           <div class="col-12 col-sm-6 col-md-6 col-lg-4">
             <i class="bi bi-wordpress"></i>
             <h4 class="h4 mb-2">WordPress Website</h4>
-            <p>Yes, I can code and build a website (WordPress, HTML, CSS & JS). Need something complex?
-I know some amazing developers I can recommend.</p>
+            <p>Yes, I can code and build a website (WordPress, HTML, CSS & JS).</p>
             <ul class="list-unstyled list-line">
               <li>Elementor</li>
               <li>HTML, CSS & JS</li>
